@@ -1,6 +1,7 @@
 FOF 3.0.9
 ================================================================================
 + Reset the APC cache, if enabled, before installing/updating an extension using an InstallScript script class.
+# [HIGH] Params won't work properly with Conservative caching
 
 FOF 3.0.8
 ================================================================================
